# Genetic-Mutation-Detection-project

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  FINAL_STATUS.md  GITHUB_SETUP_CHECKLIST.md  Makefile  PROJECT_GUIDE.html  README.md  canonical-numbers.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  task.md
.github/workflows/: lint.yml  test.yml
configs/: config.yaml
data/: README.md
data/processed/: final_strict.parquet
data/splits/: test.parquet  val.parquet
data/splits/phase21/: test.parquet  val.parquet
data/splits/strict/: test.parquet  train.parquet  val.parquet
docs/: CHANGELOG.md
docs/defense_prep/: 00_README.md  01_critical_fixes.md  02_new_slides.tex  03_regenerate_shap_figure.py  04_qa_prep.md  05_speaker_notes.md  06_polish_pass.md  DEFENSE_PLAYBOOK.md  DEMO_VARIANTS.md  QA_QUICK_REFERENCE.md  rayan_commits.txt
notebooks/: 00_overview.ipynb  01_data_download.ipynb  01_data_download_verify.ipynb  01_data_sources_and_cleaning.ipynb  02_EDA.ipynb  02_clinvar_cleaning.ipynb  02_feature_engineering.ipynb  03_feature_engineering.ipynb  03_leakage_hunt.ipynb  04_baseline_models.ipynb  04_data_validation.ipynb  04_model_training.ipynb  05_deep_learning.ipynb  05_evaluation_and_calibration.ipynb  05_feature_analysis.ipynb  06_data_splitting.ipynb  06_evaluation.ipynb  06_shap_interpretability.ipynb  07_EDA.ipynb  07_external_validation_denovo_db.ipynb  08_baseline_comparison.ipynb  08_baseline_models.ipynb  09_esm2_zero_shot.ipynb  11_esm2_full_scoring_colab.ipynb  12_alphafold_features_colab.ipynb
notebooks/legacy/: 01_data_download_verify.ipynb  03_feature_engineering.ipynb  04_data_validation.ipynb  06_data_splitting.ipynb  README.md
report/: README.md  defense.tex  main.tex  references.bib
report/academic/: .gitignore  README.md  defense.tex  references.bib  thesis.tex
report/academic/figures/flowcharts/: 01_pipeline_3parts.mmd  02_leakage_audit.mmd  03_evaluation_flow.mmd  04_gantt_schedule.mmd
report/academic/figures/misc/: architecture.mmd
report/academic/figures/uml/: 01_use_case.puml  02_class.puml  03_sequence.puml  04_activity.puml  05_state.puml  06_component.puml
results/checkpoints/: xgboost_best.ubj  xgboost_phase21_esm2.ubj  xgboost_phase21_optuna_esm2.ubj  xgboost_pre_constraint.ubj
results/metrics/: README.md  ablation.csv  ablation_af.csv  ablation_esm2_phase21.csv  ablation_feature_groups.csv  baselines_comparison.csv  baselines_coverage.csv  baselines_intersection.csv  brier_decomposition.csv  confident_errors.csv  denovo_paired_bootstrap.csv  denovo_paired_bootstrap_phase21.csv  denovo_significance.json  error_analysis.csv  esm2_aggregation_sensitivity_phase21.csv  esm2_correlation_analysis_phase21.csv  esm2_denovo_db_comparison.csv  esm2_denovo_db_scores.parquet  external_calibration.csv  external_denovo_db_coverage.csv  external_denovo_db_coverage_phase21.csv  external_denovo_db_metrics.csv  external_denovo_db_metrics_phase21.csv  external_denovo_db_predictions.parquet  external_denovo_db_unmapped.csv  gnomad_constraint_medians.csv  leakage_fix_journey.csv  learning_curve.csv  pairwise_pvalues.csv  phase21_ablation_paired_bootstrap.csv  phase21_ablation_summary.csv  phase21_calibration_comparison.csv  rank_fusion_esm2.csv  shap_ranking_phase21.csv  xgboost_best_params.csv  xgboost_bootstrap_ci.csv  xgboost_calibrated_metrics.csv  xgboost_calibration_summary.csv  xgboost_feature_columns.csv  xgboost_operating_points.csv  (+14 more)
results/metrics/phase21/: xgboost_bootstrap_ci.csv  xgboost_calibrated_metrics.csv  xgboost_calibration_summary.csv  xgboost_operating_points.csv  xgboost_reliability_curve.csv
scripts/: ablate_esm2.py  analyze_esm2_denovo.py  build_phase21_train.py  compute_shap.py  compute_shap_phase21.py  denovo_significance.py  evaluate_external.py  intersection_baselines.py  make_lockdown_figures.py  paired_bootstrap_denovo.py  paired_bootstrap_denovo_phase21.py  phase21_calibration_audit.py  phase21_diagnostics.py  probe_esm2_aggregation.py  regenerate_shap_figure.py  run_ablation.py  run_alphafold_features.py  run_baselines.py  run_baselines_matched.py  run_error_analysis.py  run_external_calibration.py  run_learning_curve.py  run_pairwise_tests.py  run_rank_fusion_esm2.py  score_denovo_paired.py  score_denovo_phase21.py  streamlit_app.py  train_phase21_xgboost.py  verify_esm2_split_integrity.py
src/: __init__.py  ablation_af.py  calibration_deep.py  clinvar_cleaning.py  data_loader.py  data_merge.py  data_splitting.py  data_validation.py  dbnsfp_extraction.py  esm2_scorer.py  evaluate_baseline.py  evaluation.py  feature_analysis.py  features.py  gnomad_constraint.py  gnomad_extraction.py  output.py  preprocessing.py  structural_features.py  training.py  utils.py  verify_no_leakage.py
src/baselines/: alphamissense.py  evaluate.py  sift_polyphen.py
src/external_validation/: __init__.py  denovo_loader.py  evaluate.py  featurize.py  variant_mapper.py  vep_featurize.py
src/models/: __init__.py  cnn_model.py  esm2_model.py  xgboost_model.py
src/stats/: paired_tests.py
tests/: conftest.py  test_baselines.py  test_calibration_deep.py  test_data_splitting.py  test_denovo_loader.py  test_evaluation.py  test_featurize.py  test_gnomad_constraint.py  test_streamlit_app.py  test_structural_features.py  test_utils.py  test_variant_mapper.py  test_verify_no_leakage.py  test_xgboost_model.py
tests/integration/: test_esm2_sanity.py  test_esm2_split_integrity.py  test_phase21_drift.py  test_pre_constraint_model.py  test_reproduce_headline.py
tests/unit/: test_ablate_esm2.py  test_intersection_baselines.py  test_paired_bootstrap.py  test_phase21_build.py
